<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.settings.admin.FragmentAdminSettings"
    android:padding="@dimen/horizontal_padding_default">

    <ScrollView
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/ScreenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subTitle"
                style="@style/ScreenSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_settings" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/accountLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/view_padding_36"
                android:text="@string/label_account"
                android:textSize="@dimen/screen_sub_header1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePasswordButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/label_change_password"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePinButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/label_change_pin"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/personnelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_personnel_settings"
                android:textSize="@dimen/screen_sub_header1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPosition"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_add_position"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPersonnelButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_add_personnel"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createScheduleButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_create_schedule"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nfcLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/label_nfc_settings"
                android:textSize="@dimen/screen_sub_header1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nfcCategoryButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_nfc_categories"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addNfcTagButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/title_add_nfc"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nfcPlacesButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_nfc_places"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/warehouseLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/label_warehouse"
                android:textSize="@dimen/screen_sub_header1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/warehouseButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/button_add_warehouse"
                android:textSize="@dimen/screen_body"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/view_padding_36"
                android:text="@string/button_logout"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/screen_body"
                app:cornerRadius="@dimen/view_padding_16"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>