<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.screens.report.FragmentPatrolReport"
    android:padding="@dimen/horizontal_padding_default">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/ScreenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_padding_8"
        android:text="@string/title_personnel_report" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subTitle"
        style="@style/ScreenSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_padding_8"
        android:text="@string/sub_title_personnel_patrol_report" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/view_padding_8">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_date_start"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDateStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/label_select_date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:focusedByDefault="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_date_end"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDateEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/label_select_date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:focusedByDefault="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_reports"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/view_padding_4"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_export"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingReports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/view_padding_16"/>

</LinearLayout>