<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewDialog"
    android:layout_margin="@dimen/view_padding_36">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/horizontal_padding_default">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/screen_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_tagging_option"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/screen_body"
            android:layout_margin="@dimen/view_padding_16" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRemarks"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding_16"
            android:hint="@string/label_remarks">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:nextFocusForward="@id/tiePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/view_padding_24">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nfcButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_nfc"
                app:iconGravity="textStart"
                android:layout_marginHorizontal="@dimen/view_padding_4"
                android:text="@string/button_nfc"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/qrCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_scan_qr_code"
                android:visibility="gone"
                app:iconGravity="textStart"
                android:layout_marginHorizontal="@dimen/view_padding_4"
                android:text="@string/button_qr_code"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_circular_close"
                app:iconGravity="textStart"
                android:layout_marginHorizontal="@dimen/view_padding_4"
                android:text="@string/button_cancel"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>